# genshin-quest-to-md

./: .gitignore  README.md  json2md.py  main.py  pyproject.toml
format_examples/: renderer.novel.json  renderer.novel.yaml  renderer_novel.py  templates.default.json  templates.default.yaml
src/genshhin_json_to_md/: cli.py  config.py  filters.py  placeholders.py  stream.py
src/genshhin_json_to_md/renderers/: plugin.py  templates.py
src/json_to_md/: cli.py  config.py  filters.py  parser.py  placeholders.py  stream.py
src/json_to_md/renderers/: __init__.py  templates.py
tests/fixtures/: sample_story.json
